2016-05-16  Eric Herman <eric@freesa.org>

	* Initial Release: v1.0.0

2016-05-16  Eric Herman <eric@freesa.org>

	* ChangeLog: Freshly created ChangeLog.