@@ -1,3 +1,1 @@
 libehht development TODO items:
-
-* get demos working with autotools
