@@ -1,3 +1,7 @@
+2016-05-21  Eric Herman <eric@freesa.org>
+
+	demos working
+
 2016-05-16  Eric Herman <eric@freesa.org>
 
 	* Initial Release: v1.0.0
